Alter CSS styles of the webpage

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>Leonardo's Website</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <table cellspacing="2">
+  <table cellspacing="10">
     <tr>
-      <td><img src="./images/personal_photo.jpg" alt="leonardo profile picture" height="250px" /></td>
+      <td><img src="./images/personal_cropped.png" alt="leonardo profile picture" height="225px" /></td>
       <td>
         <h1>Leonardo Tomasi Francis</h1>
-        <p><em>Computer Enginneer,<strong><a href="http://ufsc.br">UFSC</a></strong>.</em></p>
-        <p>This is Leonardo, he is an just graduated Computer Enginneer from <strong>UFSC</strong>. He is 26 years old and aquarian who likes to read and learn new languages.</p>
+        <p><em>Computer Enginneer, <strong><a href="http://ufsc.br">UFSC</a></strong>.</em></p>
+        <p>I am a 26 years old just graduated Computer Enginneer (<strong>UFSC</strong>). I like to read fantasy books, learn new languages and drink coffee.</p>
       </td>
     </tr>
   </table>
